--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <logback.version>1.0.13</logback.version>
-        <kotlin.version>0.14.449</kotlin.version>
+        <kotlin.version>1.0.0-beta-1038</kotlin.version>
     </properties>
 
     <repositories>
